# uecore

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README  THANKS  configure.ac
contrib/extractor/loadlib/: loadlib.h
dep/include/mersennetwister/: MersenneTwister.h
sql/: Makefile.am  characters.sql  mangos.sql  realmd.sql
sql/cwcore-fixes/Revision 1000/: backup.rar
sql/cwcore-fixes/Revision 1001/: 1001_gothik.sql  1001_nexus_mangos.sql  1001_nexus_mangos_eventai.sql  1001_nexus_scriptdev2.sql  1001_utgarde_keep_mangos.sql  1001_utgarde_keep_scriptdev2.sql
sql/cwcore-fixes/Revision 1002/: 1002_spell_bonus_data.sql
sql/cwcore-fixes/Revision 1003/: 1003_gameobject_template.sql  1003_spell_proc_event.sql
sql/cwcore-fixes/Revision 104/: mangos_spell_proc_event.sql
sql/cwcore-fixes/Revision 106/: mangos_spell_proc_event.sql
sql/cwcore-fixes/Revision 121/: 121_dc.sql
sql/cwcore-fixes/Revision 124/: 124_announce.sql  124_eye_of_acherus.sql  124_pinfo_mangos_string.sql
sql/cwcore-fixes/Revision 125/: 125_grant_theft_palemino.sql  125_passengger.sql  125_quest 12687.sql
sql/cwcore-fixes/Revision 131/: 131_naxxramas_mangos.sql
sql/cwcore-fixes/Revision 132/: 132_halls_of_lightning_mangos.sql  132_utgarde_pinnacle_mangos.sql  132_utgarde_pinnacle_script_text.sql
sql/cwcore-fixes/Revision 56/: 56_mangos.sql  56_realmd_autobroadcast.sql
sql/cwcore-fixes/Revision 70/: ebon_hold_mangos.sql
sql/cwcore-fixes/Revision 82/: 82_update_dc.sql
sql/cwcore-fixes/Revision 83/: 83_quest.sql
sql/cwcore-fixes/Revision 84/: 84_spell_proc_event.sql
sql/cwcore-fixes/Revision 85/: 85_spell_proc_event.sql
sql/fixes/: CWDB_DBFixes_Installer.bat  TODO.txt
sql/fixes/310/: 2_characters_character_equipmentsets.sql  6_mangos_gameobject_template.sql
sql/fixes/Announce-System/: announce_system.sql
sql/fixes/Events/: Event_Stormwind_Attack_UDB_mangos_v2b.sql  Event_Stormwind_Attack_YTDB_mangos_v2b.sql
sql/fixes/Instances/: blackrock_depths_mangos.sql  instance_sd2.sql
sql/fixes/Quests/: Quest fixes mangos.sql  dragonblight.sql
sql/fixes/Vehicles System/: mangos_vehicles_system.sql  vehicle_test_data.sql
sql/fixes/auto-announcer/: aa.sql  mangos_aa.sql  realmd_aa.sql
sql/fixes/av/: mangos.sql
sql/fixes/commands_fixes/: 9999_01_mangos_command.sql
sql/fixes/creatures_fixes/: mangos_ghoul-summon-fix.sql  mangos_ulduar_bosses.sql
sql/fixes/custom_patches/: 01_items_fixes_311_mangos.sql  01_spells_fixes_311_mangos.sql  Readme.txt
sql/fixes/guildhouses/: 01_scriptdev2_guildhouses.sql  02_mangos_guildmaster.sql
sql/fixes/item_fixes/: mangos_items.sql
sql/fixes/multilanguage guards/: guards.sql  stormwind guard.sql
sql/fixes/multilanguage_guards/: mangos_stormwind_guards.sql  scriptdev2_guards.sql
sql/fixes/outdoorpvp_sql/: wintergrasp.sql
sql/fixes/pet/: pet_levelspell.sql
sql/fixes/pet_fixes/: mangos_pet_levelstats.sql
sql/fixes/quests_fixes/: 001_mangos_quest_event.sql  mangos_Quest_fixes.sql  mangos_dragonblight.sql  scriptdev2_Quest_fixes.sql  scriptdev2_quest_neeru_fireblade.sql  scritpdev2_npc_loot_crazed_hunter.sql
sql/fixes/scriptnames/: scriptname.sql
sql/fixes/serverwide_event/: mangos_event.sql  world_event_example.sql  world_event_mangos.sql
sql/fixes/spell_fixes/: mangos_npc_spellclick_spells.sql  mangos_raise_dead.sql  mangos_spell_bonus.sql  mangos_spell_chain.sql  mangos_spell_disabled.sql  mangos_spell_elixir.sql  mangos_spell_proc.sql  npc_spellclick_spells.sql  spell_target_position.sql
sql/fixes/tools/: Spell-Item v1.0 By Zhoom.bat
sql/fixes/translations/: Prepare_locales_tables.sql  scriptdev2_deDE.sql
sql/tools/: characters_arena_honor_reset.sql  realmd_account_cleanup.sql  realmd_cleanup_empty_accounts.sql  realmd_cleanup_not_logged_accounts.sql
sql/uecore-fixes/Revision 110/: 110_scripts_texts_dc.sql
sql/uecore-fixes/Revision 120/: 120_ebon_hold_script_text.sql
sql/uecore-fixes/Revision 123/: 123_damage.sql
sql/uecore-fixes/Revision 124/: 124_announce.sql
sql/uecore-fixes/Revision 133/: 133_halls_of_lightning_mangos.sql  133_halls_of_lightning_script_text.sql
sql/uecore-fixes/Revision 136/: 136_spell_proc_event.sql
sql/uecore-fixes/Revision 139/: 139_characters_battleground.sql
sql/uecore-fixes/Revision 154/: 154_argent tournament.sql  154_grant_theft_palomino.sql
sql/uecore-fixes/Revision 56/: 56_announce-system.sql
sql/uecore-fixes/Revision 70/: ebon_hold_script_text.sql
sql/uecore-fixes/Revision 73/: mangos_av_fix.sql  mangos_reputation_example.sql
sql/uecore-fixes/Revision 77/: characters-cheats.sql
sql/updates/: 9999_01_command.sql  9999_02_mangos_string.sql  Makefile.am
sql/updates/Freeze-Command SQLs/: 2008_XX_XX_XX_mangos_command.sql  2008_XX_XX_XX_mangos_mangos_string.sql
src/: CMakeLists.txt
src/bindings/: .gitignore  CMakeLists.txt
src/bindings/ScriptDev2/: config.h  (+6 more)
src/bindings/universal/: CMakeLists.txt
src/game/: AchievementMgr.cpp  AchievementMgr.h  AggressorAI.cpp  ArenaTeam.cpp  ArenaTeam.h  AuctionHouseBot.cpp  Bag.cpp  BattleGround.cpp  BattleGround.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundEY.cpp  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundWS.cpp  CalendarHandler.cpp  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  ChatLexicsCutter.cpp  ChatLexicsCutter.h  ChatLog.cpp  ChatLog.h  Creature.cpp  Creature.h  CreatureAIRegistry.cpp  CreatureEventAI.cpp  CreatureEventAI.h  CreatureEventAIMgr.cpp  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h  DynamicObject.cpp  FleeingMovementGenerator.h  GameEventMgr.cpp  GameEventMgr.h  (+114 more)
src/mangosd/: Main.cpp  Makefile.am  Master.cpp  mangosd.conf.dist.in
src/realmd/: AccountHandler.cpp  AccountHandler.h  AuthCodes.h  AuthSocket.cpp  AuthSocket.h  Main.cpp  Makefile.am  RealmList.cpp  RealmList.h  realmd.conf.dist.in
src/shared/: Common.h  Makefile.am  SystemConfig.h.in  Util.cpp  Util.h  revision_nr.h
win/: .gitignore  mangosdVC90.sln
win/VC100/: game.vcxproj
win/VC90/: .gitignore  game.vcproj  mangosd.vcproj  realmd.vcproj  shared.vcproj
(+292 files in other folders)
