# Copyright (C) 2005-2009 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	7705_01_mangos_command.sql \
	7706_01_mangos_command.sql \
	7714_01_mangos_command.sql \
	7720_01_mangos_mangos_string.sql \
	7776_01_mangos_npc_spellclick_spells.sql \
	7777_01_mangos_spell_proc_event.sql \
	7782_01_mangos_spell_proc_event.sql \
	7796_01_mangos_command.sql \
	7796_02_mangos_mangos_string.sql \
	7802_01_characters_character_achievement.sql \
	7802_02_characters_character_achievement_progress.sql \
	7823_01_mangos_item_template.sql \
	7830_01_mangos_spell_chain.sql \
	7839_01_mangos_mangos_string.sql \
	7839_02_mangos_command.sql \
	7850_01_mangos_command.sql \
	7855_01_mangos_pools.sql \
	README

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	7705_01_mangos_command.sql \
	7706_01_mangos_command.sql \
	7714_01_mangos_command.sql \
	7720_01_mangos_mangos_string.sql \
	7776_01_mangos_npc_spellclick_spells.sql \
	7777_01_mangos_spell_proc_event.sql \
	7782_01_mangos_spell_proc_event.sql \
	7796_01_mangos_command.sql \
	7796_02_mangos_mangos_string.sql \
	7802_01_characters_character_achievement.sql \
	7802_02_characters_character_achievement_progress.sql \
	7823_01_mangos_item_template.sql \
	7830_01_mangos_spell_chain.sql \
	7839_01_mangos_mangos_string.sql \
	7839_02_mangos_command.sql \
	7850_01_mangos_command.sql \
	7855_01_mangos_pools.sql \
	README
