# Copyright (C) 2005-2009 MaNGOS <http://getmangos.com/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Change installation location
#  datadir = mangos/sql/updates
pkgdatadir = $(datadir)/mangos/sql/updates

## Files to be installed
#  Install basic SQL files to datadir
pkgdata_DATA = \
	7802_01_characters_character_achievement.sql \
	7802_02_characters_character_achievement_progress.sql \
	7823_01_mangos_item_template.sql \
	7830_01_mangos_spell_chain.sql \
	7839_01_mangos_mangos_string.sql \
	7839_02_mangos_command.sql \
	7850_01_mangos_command.sql \
	7855_01_mangos_pools.sql \
	7867_01_realmd_account.sql \
	7879_01_mangos_spell_proc_event.sql \
	7884_01_mangos_playercreateinfo_spell.sql \
	7884_02_mangos_playercreateinfo_action.sql \
	7884_03_characters_character_spell.sql \
	7884_04_characters_character_aura.sql \
	7884_05_characters_character_action.sql \
	7886_01_mangos_petcreateinfo_spell.sql \
	7887_01_characters_character_pet.sql \
	7893_01_mangos_command.sql \
	7896_01_mangos_creature_template.sql \
	7902_01_mangos_pool_creature.sql \
	7902_02_mangos_pool_gameobject.sql \
	7903_01_characters_character_pet.sql \
	7904_01_mangos_creature_template.sql \
	7908_01_mangos_creature_template.sql \
	7908_02_mangos_creature_addon.sql \
	7908_03_mangos_creature_template_addon.sql \
	7932_01_characters_character_pet.sql \
	README

## Additional files to include when running 'make dist'
#  SQL update files, to upgrade database schema from older revisions
EXTRA_DIST = \
	7802_01_characters_character_achievement.sql \
	7802_02_characters_character_achievement_progress.sql \
	7823_01_mangos_item_template.sql \
	7830_01_mangos_spell_chain.sql \
	7839_01_mangos_mangos_string.sql \
	7839_02_mangos_command.sql \
	7850_01_mangos_command.sql \
	7855_01_mangos_pools.sql \
	7867_01_realmd_account.sql \
	7879_01_mangos_spell_proc_event.sql \
	7884_01_mangos_playercreateinfo_spell.sql \
	7884_02_mangos_playercreateinfo_action.sql \
	7884_03_characters_character_spell.sql \
	7884_04_characters_character_aura.sql \
	7884_05_characters_character_action.sql \
	7886_01_mangos_petcreateinfo_spell.sql \
	7887_01_characters_character_pet.sql \
	7893_01_mangos_command.sql \
	7896_01_mangos_creature_template.sql \
	7902_01_mangos_pool_creature.sql \
	7902_02_mangos_pool_gameobject.sql \
	7903_01_characters_character_pet.sql \
	7904_01_mangos_creature_template.sql \
	7908_01_mangos_creature_template.sql \
	7908_02_mangos_creature_addon.sql \
	7908_03_mangos_creature_template_addon.sql \
	7932_01_characters_character_pet.sql \
	README
